<resources>
    <string name="app_name">Trip Control</string>
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="title_activity_gasto_edit">Editar Gasto</string>
    <string name="title_activity_gasto_new">Novo Gasto</string>
    <string name="title_activity_gastos_list">Gastos</string>
    <string name="title_activity_inicio">Início</string>
    <string name="title_activity_pagamentos_list">Pagamentos</string>
    <string name="title_activity_planejamentos_list">Planejamentos</string>
    <string name="title_activity_pagamentos_edit">Editar Pagamento</string>
    <string name="title_activity_pagamentos_new">Novo Pagamento</string>
    <string name="title_activity_planejamento_edit">Editar Planejamento</string>
    <string name="title_activity_planejamentos_new">Novo Planejamento</string>
    <string name="title_activity_configuracoes_list">Configurações</string>
    <string name="title_activity_usuario_edit">Editar Usuário</string>
    <string name="title_activity_usuario_novo">Novo Usuário</string>
    <string name="title_activity_categoria_list">Categorias</string>
    <string name="title_activity_tipos_pagamento_list">Tipos de Pagamento</string>
    <string name="title_activity_notificacoes_configuracao">Configurações de Notificação</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_termo_uso">Termo de Uso e Privacidade</string>
    <string name="title_activity_esqueci_senha">Esqueci Senha</string>
    <string name="atualizar">Atualizar</string>
    <string name="buscar">Buscar</string>
    <string name="categorias">Categorias</string>
    <string name="configuracoes">Configurações</string>
    <string name="editarusuario">Editar Usuário</string>
    <string name="enviar">Enviar</string>
    <string name="exportar">Exportar</string>
    <string name="gastos">Gastos</string>
    <string name="inserir_gastos">Inserir Gastos</string>
    <string name="inserir_metodopagamento">Inserir Método de Pagamento</string>
    <string name="inserir_planejamento">Inserir Planejamento</string>
    <string name="metodospagamento">Métodos de Pagamento</string>
    <string name="planejamentos">Planejamentos</string>
    <string name="salvar">Salvar</string>
    <string name="viagens">Viagens</string>
    <string name="voltar">Voltar</string>
    <string name="a">a</string>
    <string name="adicioneviagem">Adicione uma viagem para começar</string>
    <string name="alterarsenha">Alterar senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="codigoconfirmacao">Código de confirmação</string>
    <string name="codigoconfirme">Informe o código recebido para alterar sua senha.</string>
    <string name="entrar">Entrar</string>
    <string name="enviaremail">Enviar um email</string>
    <string name="enviarsms">Enviar um SMS</string>
    <string name="esquecisenha">Esqueci minha senha</string>
    <string name="excluir_registro">O registro selecionado será excluído. Esta opção não pode ser desfeita.</string>
    <string name="informenovasenha">Informe sua nova senha</string>
    <string name="login">Login</string>
    <string name="logo">Logomarca</string>
    <string name="moeda">R$</string>
    <string name="novaviagem">Nova viagem</string>
    <string name="novousuario">Novo usuário</string>
    <string name="periodo">Período:</string>
    <string name="selecioneopcao">Selecione uma opção abaixo para redefinir sua senha:</string>
    <string name="usarcodusuario">Usar meu código de usuario</string>
    <string name="valordisponivel">Valor disponível:</string>
    <string name="novoplanejamento">Novo Planejamento</string>
    <string name="adicionar_categoria">Incluir categoria</string>
    <string name="editar">Editar</string>
    <string name="adicionar_tipopagamento">Incluir tipo de pagamento</string>
    <string name="semsenha">Permitir entrar sem senha.</string>
    <string name="bemvindo">Bem vindo ao TripControl</string>
    <string name="co_perfil_usuario">Perfil de Usuário</string>
    <string name="co_notificacoes">Notificações</string>
    <string name="co_termo_uso">Termo de Uso</string>
    <string name="co_categorias">Editar Categorias</string>
    <string name="co_tipos_pagamento">Editar Tipos de Pagamento</string>
    <string name="co_sobre">Sobre o aplicativo</string>
    <string name="co_avalie">Avaliação e Feedback</string>
    <string name="co_sair">Sair</string>
    <string name="so_versao">Versão: </string>
    <string name="so_datainstalacao">Data de Instalação: </string>
    <string name="so_desenvolvedor">Desenvolvido por: </string>
    <string name="so_responsavel">Responsáveis pelo desenvolvimento: </string>
    <string name="so_libelula">Libélula TI</string>
    <string name="so_marcela">Marcela Melo</string>
    <string name="so_elcio">Elcio Raimundo</string>
    <string name="so_email">desenvolvimento@libelulati.com</string>
    <string name="so_site">www.libelulati.com</string>
    <string name="ativar_notificacoes">Ativar Notificações</string>
    <string name="notificacao_todas">Todas</string>
    <string name="notificacao_viagem">Viagens</string>
    <string name="notificacao_pagamentos">Pagamentos</string>
    <string name="notificacao_planejamento">Planejamento</string>
    <string name="notificacao_gasto">Gasto</string>
    <string name="codarea">Código de área / DDD</string>
    <string name="codigosenha">Código</string>
    <string name="codusuario">Código de usuário</string>
    <string name="confirmesenha">Confirme a senha</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="detalhe">Detalhe</string>
    <string name="digiteseuemail">Insira o e-mail utilizado no cadastro de usuário</string>
    <string name="dtfim">Fim</string>
    <string name="dtinicio">Início</string>
    <string name="dtnasc">Data de Nascimento</string>
    <string name="dtvenc">Vencimento</string>
    <string name="email">E-mail</string>
    <string name="site">Site</string>
    <string name="hospedagem">Hospedagem</string>
    <string name="lista">Nova Lista</string>
    <string name="localizacao">Localização</string>
    <string name="nome">Nome</string>
    <string name="formapagamento">Forma de pagamento</string>
    <string name="relatorios">Relatórios</string>
    <string name="selecioneviagem">Selecione uma Viagem</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="tipohospedagem">Tipo de hospedagem</string>
    <string name="tipopagamento">Tipo Pagamento</string>
    <string name="tipotransporte">Tipo de transporte</string>
    <string name="transporte">Transporte</string>
    <string name="valor">Valor</string>
    <string name="total">Total:</string>
    <string name="categoria">Categoria</string>
    <string name="gasto">Gasto</string>
    <string name="pagamento">Pagamento</string>
    <string name="planejamento">Planejamento</string>
    <string name="tppagamento">Tipo de Pagamento</string>
    <string name="usuario">Usuário</string>
    <string name="viagem">Viagem</string>
    <string name="opcao_cancelar">Cancelar</string>
    <string name="opcao_confirmar">Confirme a exclusão do registro</string>
    <string name="opcao_deletar">Deletar</string>
    <string name="opcao_editar">Editar</string>
    <string name="opcao_excluir">será excluído</string>
    <string name="opcao_ok">OK</string>
    <string name="opcao_titulo">Escolha uma opção</string>
    <string name="opcao_visualizar">Visualizar</string>
    <string name="nulo_email">O e-mail não pode ser nulo.</string>
    <string name="validar_campo_vazio">O campo não pode ser vazio.</string>
    <string name="validar_categoria">A categoria precisa ter o mínimo de 5 caracteres não numéricos.</string>
    <string name="validar_codarea">O código de área deve possuir mais de 2 caracteres numéricos.</string>
    <string name="validar_codigoSenha">O código digitado não corresponde ao enviado. Tente novamente.</string>
    <string name="validar_codigoUsuario">O código de usuário digitado não é válido.</string>
    <string name="validar_confirmesenha">As senhas digitadas não são iguais.</string>
    <string name="validar_detalhe">O campo precisa ter o mínimo de 5 caracteres não numéricos.</string>
    <string name="validar_dtfim">A data final não pode ser anterior à data inicial.</string>
    <string name="validar_dtinicio">A data inicial não pode ser anterior à data atual.</string>
    <string name="validar_dtnasc">A idade não pode ser menor que 15 anos.</string>
    <string name="validar_dtvenc">A data de vencimento não pode ser anterior à data atual.</string>
    <string name="termouso">1Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elementum scelerisque tortor vel sollicitudin. Ut in ipsum at ex pulvinar pharetra ut ut quam. Nam mollis varius massa et dignissim. Nulla pretium ipsum eleifend volutpat pellentesque. Suspendisse aliquet vestibulum nunc, nec feugiat velit fermentum non. Aenean hendrerit magna nec sagittis faucibus. Vivamus tellus diam, laoreet lacinia lobortis ut, vestibulum eu ex. Duis magna ligula, porttitor vel bibendum id, vulputate vitae purus. Donec ullamcorper, turpis nec euismod tincidunt, ligula tortor gravida purus, eget blandit tellus eros quis nulla. Nulla id sodales dolor. Phasellus tempor tincidunt mollis. Nunc consectetur, orci at posuere vulputate, ex mauris malesuada erat, auctor dictum metus nunc id augue. Donec blandit nisi ut feugiat vehicula. Proin tellus ex, tincidunt eu volutpat eget, gravida ut orci. Morbi in dapibus felis. Mauris placerat odio eu elit venenatis, in euismod odio suscipit.
        2Sed eget nulla facilisis massa suscipit sagittis sit amet aliquet elit. Praesent ultricies lacinia vestibulum. Suspendisse malesuada aliquet facilisis. Pellentesque dui nulla, venenatis at vehicula et, finibus at eros. Fusce et lorem vestibulum nunc tempor ultricies. Nunc fringilla erat nulla, nec tristique elit elementum vel. Ut feugiat varius sapien, quis malesuada libero varius eu. Suspendisse potenti.
        3Sed molestie et turpis at posuere. Duis congue neque ac tincidunt porta. Phasellus maximus dolor orci, quis vestibulum nunc imperdiet ac. Pellentesque nisi tortor, finibus eget quam ut, condimentum suscipit enim. Curabitur dui velit, pharetra hendrerit massa vel, tempus semper leo. Nunc molestie mauris et tempus porta. Integer eu rhoncus neque, a tempor diam. Ut maximus arcu elit, condimentum pretium odio tristique non. Donec a tempus erat. Pellentesque molestie imperdiet turpis sit amet mattis. Curabitur at neque diam.
        4Sed congue diam fermentum, pulvinar sem eget, suscipit lorem. Integer elementum velit et neque cursus imperdiet. Nulla et nibh et enim eleifend pulvinar et at nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nullam ante ex, finibus vel feugiat ac, convallis ac magna. Praesent auctor sit amet justo vel pellentesque. Suspendisse potenti. Aliquam ultricies congue tortor id blandit. In molestie vehicula sollicitudin. Donec bibendum, nisi at dictum accumsan, libero elit maximus lacus, eget finibus quam dolor vitae risus. Proin non velit in sapien condimentum cursus. Phasellus vulputate eget mi et aliquam. Vivamus non sem ac elit tempus aliquam. Aliquam et dolor ac arcu venenatis tincidunt. Phasellus in posuere erat, vel commodo arcu.

        5Aenean elementum ultrices vulputate. Morbi nec viverra quam. Nunc quis consequat est. Nulla turpis enim, efficitur id pellentesque id, accumsan sed sapien. Nam non odio eu quam posuere suscipit ac ac diam. Suspendisse condimentum ex sit amet ex porttitor, malesuada vehicula est bibendum. Vivamus velit velit, commodo quis sapien eu, maximus placerat odio. Cras eget nulla in quam viverra maximus pharetra quis sapien.</string>
    <string name="check_termo">Li e concordo com o termo de uso acima.</string>
</resources>