<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="libelulati.tripctrl.Inicio.InicioActivity">
    <item android:id="@+id/mn_ini_buscar"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:title="@string/buscar"
        app:showAsAction="always" />

    <item android:id="@+id/mn_ini_atualizar"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="2"
        android:title="@string/atualizar"
        app:showAsAction="always" />

    <item android:id="@+id/mn_ini_editarusuario"
        android:orderInCategory="3"
        android:title="@string/editarusuario"
        app:showAsAction="never" />

    <item android:id="@+id/mn_ini_listas"
        android:orderInCategory="4"
        android:title="@string/lista"
        app:showAsAction="never" />

    <item android:id="@+id/mn_ini_categoria"
        android:orderInCategory="5"
        android:title="@string/categorias"
        app:showAsAction="never" />

    <item android:id="@+id/mn_ini_metodopagamento"
        android:orderInCategory="6"
        android:title="@string/metodospagamento"
        app:showAsAction="never" />

    <item android:id="@+id/mn_ini_viagens"
        android:orderInCategory="7"
        android:title="@string/viagens"
        app:showAsAction="never" />

    <item android:id="@+id/mn_ini_planejamento"
        android:orderInCategory="8"
        android:title="@string/planejamentos"
        app:showAsAction="never" />

    <item android:id="@+id/mn_ini_gastos"
        android:orderInCategory="9"
        android:title="@string/gastos"
        app:showAsAction="never" />

    <item
        android:id="@+id/mn_ini_relatorios"
        android:orderInCategory="10"
        android:title="@string/relatorios"
        app:showAsAction="never" />

    <item android:id="@+id/mn_ini_configuracao"
        android:orderInCategory="11"
        android:title="@string/configuracoes"
        app:showAsAction="never" />
</menu>