<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/mn_vi_salvar"
        android:icon="@drawable/ic_action_accept"
        android:orderInCategory="1"
        android:title="@string/salvar"
        app:showAsAction="always"/>
    <item android:id="@+id/mn_vi_metodopagamento"
        android:orderInCategory="2"
        android:title="@string/inserir_metodopagamento"
        app:showAsAction="always"/>
    <item android:id="@+id/mn_vi_planejamento"
        android:orderInCategory="3"
        android:title="@string/inserir_planejamento"
        app:showAsAction="always"/>
    <item android:id="@+id/mn_vi_gastos"
        android:orderInCategory="4"
        android:title="@string/inserir_gastos"
        app:showAsAction="always"/>
</menu>