<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_esqueci_senha"
    tools:context="libelulati.tripctrl.Usuarios.EsqueciSenhaActivity">

    <TextView
        android:id="@+id/tx_es_insiraemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/digiteseuemail"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ed_es_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tx_es_insiraemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tx_es_insiraemail"
        android:layout_below="@+id/tx_es_insiraemail"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/tx_es_selecioneopcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ed_es_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_es_email"
        android:layout_below="@+id/ed_es_email"
        android:layout_marginTop="20dp"
        android:text="@string/selecioneopcao"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/rg_es_gruposelecao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_es_selecioneopcao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_es_enviaremail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/enviaremail" />

        <RadioButton
            android:id="@+id/rb_es_enviarsms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/enviarsms" />

        <RadioButton
            android:id="@+id/rb_es_codusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:text="@string/codusuario" />

    </RadioGroup>

    <EditText
        android:id="@+id/ed_es_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_es_gruposelecao"
        android:layout_alignEnd="@+id/ed_es_codusuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_es_codusuario"
        android:layout_marginTop="20dp"
        android:hint="@string/telefone"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/ed_es_codusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_es_gruposelecao"
        android:layout_alignEnd="@+id/rg_es_gruposelecao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/rg_es_gruposelecao"
        android:layout_marginTop="20dp"
        android:hint="@string/codusuario"
        android:visibility="invisible" />


</RelativeLayout>
