<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_notificacoes_configuracao"
    tools:context="libelulati.tripctrl.Notificacoes.NotificacoesConfiguracaoActivity">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ativar_notificacoes"
        android:id="@+id/sw_no_ativar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/fonte_list_item"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_divider"
        android:background="@color/colorGrey"
        android:layout_below="@+id/sw_no_ativar"
        android:layout_marginTop="@dimen/margin_top_co"
        android:id="@+id/vw_no_dividir"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacao_todas"
        android:id="@+id/sw_no_todas"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/vw_no_dividir"
        android:textSize="@dimen/fonte_list_item"
        android:layout_alignRight="@+id/vw_no_dividir"
        android:layout_alignEnd="@+id/vw_no_dividir"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacao_viagem"
        android:id="@+id/sw_no_viagem"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/sw_no_todas"
        android:textSize="@dimen/fonte_list_item"
        android:layout_alignRight="@+id/vw_no_dividir"
        android:layout_alignEnd="@+id/vw_no_dividir"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacao_pagamentos"
        android:id="@+id/sw_no_pagamentos"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/sw_no_viagem"
        android:textSize="@dimen/fonte_list_item"
        android:layout_alignRight="@+id/vw_no_dividir"
        android:layout_alignEnd="@+id/vw_no_dividir"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacao_planejamento"
        android:id="@+id/sw_no_planejamento"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/sw_no_pagamentos"
        android:textSize="@dimen/fonte_list_item"
        android:layout_alignRight="@+id/vw_no_dividir"
        android:layout_alignEnd="@+id/vw_no_dividir"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notificacao_gasto"
        android:id="@+id/sw_no_gasto"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@+id/sw_no_planejamento"
        android:textSize="@dimen/fonte_list_item"
        android:layout_alignRight="@+id/vw_no_dividir"
        android:layout_alignEnd="@+id/vw_no_dividir"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
